It's almost easter right?

--- a/mealdeal/templates/md/index.html
+++ b/mealdeal/templates/md/index.html
@@ -22,6 +22,7 @@
             <a href="#" class="navbar-brand d-flex align-items-center">
                 <strong>The Tesco Meal Deal Generator</strong>
             </a>
+            <a href="https://www.youtube.com/watch?v=qJXnkAVxOZA" class="navbar-brand d-flex align-items-center">🎤</a>
         </div>
     </div>
 </header>
